Added photo upload, edit and delete functions

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dodprg03o",
+    "ApiKey": "467179266464754",
+    "ApiSecret": "D5xjTpChsKPcaWCW4BH9chhynAQ"
+  }
 }
