--- a/DatingApp-SPA/package.json
+++ b/DatingApp-SPA/package.json
@@ -31,8 +31,7 @@
     "rxjs": "~6.3.3",
     "time-ago-pipe": "^1.3.2",
     "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
-    "tar": ">=4.4.2"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
@@ -53,7 +52,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.2.2",
-    "tar": ">=4.4.2"
+    "typescript": "~3.2.2"
   }
 }
