Removed compiled code

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,7 +3,8 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=DatingApp; Uid=appuser; Pwd=password"
+    "DefaultConnection": "Server=localhost; Database=DatingApp; Uid=appuser; Pwd=password",
+    "ProdConnection": "Data Source=xxxx.amazonaws.com;Initial Catalog=DatingApp;User ID=appuser;Password=password;"
   },
   "Logging": {
     "LogLevel": {
