Minor change in API readme

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -4,7 +4,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost; Database=DatingApp; Uid=appuser; Pwd=password",
-    "ProdConnection": "Data Source=datingapp.cjr2upnmx5jk.us-east-1.rds.amazonaws.com;Initial Catalog=DatingApp;User ID=appuser;Password=password;"
+    "ProdConnection": "Data Source=servername;Initial Catalog=DatingApp;User ID=appuser;Password=password;"
   },
   "Logging": {
     "LogLevel": {
