--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -13,8 +13,8 @@
   },
   "AllowedHosts": "*",
   "CloudinarySettings": {
-    "CloudName": "dodprg03o",
-    "ApiKey": "467179266464754",
-    "ApiSecret": "D5xjTpChsKPcaWCW4BH9chhynAQ"
+    "CloudName": "cloudname",
+    "ApiKey": "cloudinary api key",
+    "ApiSecret": "cloudinary api secret key"
   }
 }
